--- a/Console/Console.vcxproj.filters
+++ b/Console/Console.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\C++\Console\Console.cpp">
+    <ClCompile Include="MainSource.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
