--- a/Console/Console.vcxproj.filters
+++ b/Console/Console.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="MainSource.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MyConsole.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="MyConsole.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
