--- a/Console/Console.vcxproj.filters
+++ b/Console/Console.vcxproj.filters
@@ -18,12 +18,15 @@
     <ClCompile Include="MainSource.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MyConsole.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="MyConsole.h">
+    <ClInclude Include="resource.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="resource.h">
+    <ClInclude Include="MyConsole.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
