--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+*.lua
+face
+
+# Visual studio
 .vs
 x64
 *.sln
@@ -6,9 +10,6 @@ x64
 *.vcxproj.user
 *.aps
 *.rc
-*.lua
-
-face
 
 # Prerequisites
 *.d
