Docs: Added documentation core

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,23 @@ Debug
 .clangd
 .clang-format
 
+# LaTeX
+*.pdf
+*.acn
+*.acr
+*.alg
+*.aux
+*.glg
+*.glo
+*.gls
+*.inst
+*.log
+*.toc
+*.xmpi
+*.ist
+*.synctex.gz
+*.lol
+
 # Visual studio
 .vs
 x64
