--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.20)
-project(MyApp LANGUAGES C CXX)
+project(ConsoleArt LANGUAGES C CXX)
 
 #
 # C++ Standard
@@ -20,13 +20,18 @@ endif()
 if (CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
 	add_compile_options(-Wall -Wextra -pedantic)
 elseif (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
+	add_compile_definitions(NOMINMAX)
 	add_compile_options(/W4)
 endif()
 
 #
 # Optimization
 #
-set(CMAKE_CXX_FLAGS_RELEASE "-O3")
+if (CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
+	set(CMAKE_CXX_FLAGS_RELEASE "-O3")
+elseif (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
+	set(CMAKE_CXX_FLAGS_RELEASE "/O2")
+endif()
 
 #
 # PREBUILT STATIC LIBRARIES
@@ -76,9 +81,9 @@ else()
 	INTERFACE_INCLUDE_DIRECTORIES ${SDL_LIB_DIR})
 endif()
 
-# ---------------------------------------------------------
-#                       APP
-# ---------------------------------------------------------
+#
+# Application
+#
 file(MAKE_DIRECTORY build)
 
 file(GLOB_RECURSE APP_SOURCES
